# paleo_workflow_kit

./: .env  pyproject.toml  readme.md  requirements.txt
paleo_workflow_kit/: __init__.py  config.py  exceptions.py  image_handler.py  logging_setup.py  page_xml_handler.py  transkribus_api.py
paleo_workflow_kit/llm_cllients/: __init__.py  anthropic_client.py  base_llm.py  gemini_client.py
paleo_workflow_kit/workflows/: base_workflow.py  correction.py
scripts/: run_correction.py
